--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(detab detab.c)
 add_executable(hextodex hextodec.c)
 add_executable(any any.c)
 add_executable(setbits setbits.c)
+add_executable(bitcount bitcount.c)
