--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(hextodex hextodec.c)
 add_executable(any any.c)
 add_executable(setbits setbits.c)
 add_executable(bitcount bitcount.c)
+add_executable(escape escape.c)
