meta: pc laptop sync

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(any any.c)
 add_executable(setbits setbits.c)
 add_executable(bitcount bitcount.c)
 add_executable(escape escape.c)
+add_executable(expand expand.c)
