task 5-3: strcat with pointers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(setbits setbits.c)
 add_executable(bitcount bitcount.c)
 add_executable(escape escape.c)
 add_executable(expand expand.c)
+add_executable(strcat-ptr strcat-ptr.c)
